--- a/asset/sass/Base/_common.scss
+++ b/asset/sass/Base/_common.scss
@@ -66,7 +66,20 @@
   line-height: 18px;
   letter-spacing: 0.4px;
 }
-
+// .text-product{
+//   font-weight: 400;
+//   font-size: 22px;
+//   line-height: 1.68;
+//   letter-spacing: 0.5px;
+//   color: #fff;
+// }
+.text-slider{
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.68;
+  letter-spacing: 0.5px;
+  color: #fff;
+}
 
 // background & color
 .bg-1 {
