--- a/asset/sass/main.scss
+++ b/asset/sass/main.scss
@@ -30,4 +30,4 @@ h1{
 @import "./Pages/detail";
 @import "./Pages/contact";
 @import "./Pages/sign";
-@import "./Pages/profile"
+@import "./Pages/profile";
